libs/common-lib/src/main/java/com/example/common/error/package-info.java
@NullMarked
package com.example.common.error;

import org.jspecify.annotations.NullMarked;
